deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  generation: 2
  labels:
    app: nginx-test3
  name: sunac8-20201205
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-test3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx-test3
    spec:
      containers:
        - image: 'registry.cn-beijing.aliyuncs.com/sunac_k8s_test/sunac_repo_test:jenkins-demo:${build_tag}'
          imagePullPolicy: Always
          name: nginx-test3
          resources:
            requests:
              cpu: '0.25'
              ephemeral-storage: 2Gi
              memory: 0.25Gi
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test3-svc
  namespace: default
spec:
  ports:
    - name: tcp8057
      port: 8057
      protocol: TCP
      targetPort: 8057
  selector:
    app: nginx-test3
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-test3-ingress
  namespace: default
spec:
  rules:
    - host: k8s-nginx-test7.sunacctg.com
      http:
        paths:
          - backend:
              serviceName: nginx-test3-svc
              servicePort: 80
            path: /
            pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
      - ip: 8.131.99.175
